Fleiri cells í Tímadæmi2.1

--- a/Vika3/Tímadæmi2.1.ipynb
+++ b/Vika3/Tímadæmi2.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,19 +30,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tvær lausnir\n"
+      "Engin lausn\n"
      ]
     }
    ],
    "source": [
     "annadStig()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def Trapisa ():\n",
+    "    \n",
+    "    import math\n",
+    "\n",
+    "    #global f_global\n",
+    "    #f_global = f\n",
+    "\n",
+    "    f = lambda x: x**2\n",
+    "\n",
+    "    a = float(input(\"Sláðu inn gildi fyrir a: \"))\n",
+    "    b = float(input(\"Sláðu inn gildi fyrir b: \"))\n",
+    "    n = int(input(\"Sláðu inn gildi fyrir n: \"))\n",
+    "\n",
+    "    h = (b - a) / n\n",
+    "    sum = f(a) + f(b)\n",
+    "\n",
+    "    for i in range(1, n):\n",
+    "        x_i = a + i * h\n",
+    "        sum += 2 * f(x_i)\n",
+    "\n",
+    "    return sum * (h / 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.337962962962962"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Trapisa()"
    ]
   }
  ],
