Kominn aðeins lengra með Skilaverkefni2

--- a/Vika4/Skilaverkefni2Jup.ipynb
+++ b/Vika4/Skilaverkefni2Jup.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "\n",
-    "def Simpsons(f,a,b,n):\n",
+    "class Skil(object):\n",
+    "    \"\"\"Skilaverkefni 2 f. REI\n",
+    "    \"\"\"\n",
+    "def simpson(f,a,b,n):\n",
     "    f = lambda x: x**2\n",
     "\n",
     "    a = float(input(\"Sláðu inn gildi fyrir a: \"))\n",
@@ -28,27 +31,110 @@
     "        else: \n",
     "            sum += 4 * f(x_i)\n",
     "\n",
-    "    return sum * (h / 2)"
+    "    return sum * (h / 2)\n",
+    "\n",
+    "    #print(simpson(a,b,n))\n",
+    "\n",
+    "def vextir(u,p,k,m):\n",
+    "    u = int(input(\"Sláðu inn gildi fyrir u: \"))\n",
+    "    p = int(input(\"Sláðu inn gildi fyrir p: \"))\n",
+    "    k = int(input(\"Sláðu inn gildi fyrir k: \"))\n",
+    "    m = int(input(\"Sláðu inn gildi fyrir m: \"))\n",
+    "    a = p/100\n",
+    "    v = u * ((1+a)**2) * ((1 + (a*m/12))-u)\n",
+    "\n",
+    "    lokasvar = int(v)\n",
+    "\n",
+    "    return lokasvar\n",
+    "\n",
+    "    #print(vextir())\n",
+    "def vextir2(u,p):\n",
+    "# her er haegt ad kalla self.vextir(u,p,k,m) til ad nota fyrri fallid\n",
+    "    u = int(input(\"Sláðu inn gildi fyrir u: \"))\n",
+    "    p = int(input(\"Sláðu inn gildi fyrir p: \"))\n",
+    "    k = int(input(\"Sláðu inn gildi fyrir k: \"))\n",
+    "    m = int(input(\"Sláðu inn gildi fyrir m: \"))\n",
+    "    a = p/100\n",
+    "    v = u * ((1+a)**2) * ((1 + (a*m/12))-u)\n",
+    "    lokaupphaed = u * 2\n",
+    "\n",
+    "    '''\n",
+    "    #upphaed = int(input(\"Sláðu inn gildi fyrir upphæð: \"))\n",
+    "    upphaed = v\n",
+    "    while upphaed < upphaed * 2:\n",
+    "        upphaed *= p\n",
+    "    '''\n",
+    "\n",
+    "    man = 0\n",
+    "    ar = 0\n",
+    "    \n",
+    "    while u < lokaupphaed:\n",
+    "        u *= (1 + a / 12)\n",
+    "        man += 1\n",
+    "        if man == 12:\n",
+    "            man = 0\n",
+    "            ar += 1\n",
+    "\n",
+    "    return ar, man\n",
+    "\n",
+    "\n",
+    "def dict_creator(ls1,ls2,null_val):\n",
+    "    # sorta báða lista\n",
+    "    ls1.sort()\n",
+    "    ls2.sort()\n",
+    "    null_val = None\n",
+    "    ls1.append(null_val) # \"og óbreytanlegt(immutable) null_val af sama tagi og gildin í l1\"\n",
+    "\n",
+    "    utkoma_dict = {}\n",
+    "\n",
+    "    #ýtra og sleppi null_val\n",
+    "    for x, y in zip(ls1, ls2):\n",
+    "        if x != null_val:\n",
+    "            utkoma_dict[x] = y\n",
+    "\n",
+    "    return utkoma_dict\n",
+    "\n",
+    "\n",
+    "\n",
+    "ls1 = [23,2,1,6,7,3,4,6,7]\n",
+    "ls2 = [\"kale\",\"enia\",\"hewg\",\"roderika\",\"marika\",\"thops\",\"rogier\",\"iji\",\"millicent\"]\n",
+    "\n",
+    "#print(dict_creator(ls1,ls2,2) )\n",
+    "#skilar\n",
+    "#{1: 'enia', 3: 'iji', 4: 'kale', 6: 'millicent', 7: 'rogier', 23: 'thops'}\n",
+    "    #if __name__ == '__main__':\n",
+    "        \n",
+    "#her er haegt ad profa klassann\n",
+    "# getid keyrt tetta allt i kodacellu i vscode(i einu)\n",
+    "#eda keyrt skil_s2.py i command line.\n",
+    "#daemi ad nedan\n",
+    "        #skil = Skil()\n",
+    "        #val = skil.vextir(300000,20,10,1)\n",
+    "#print(val)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "28.0"
+       "(34, 9)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Simpsons(2,4,6,8)"
+    "simpson(2,4,6,8)\n",
+    "\n",
+    "vextir(2,4,6,8)\n",
+    "\n",
+    "vextir2(2,4)"
    ]
   }
  ],
