Kláraði Tímadæmi3 í py

--- a/Vika5/Skilaverkefni3Jup.ipynb
+++ b/Vika5/Skilaverkefni3Jup.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def arr_to_dict(self, arr):\n",
+    "class Skil:\n",
+    "    \"\"\"Skilaverkefni 3 f. REI\"\"\"\n",
+    "    def arr_to_dict(self, arr):\n",
     "        '''Skrifið fall arr_to_dict(arr) þar sem tekur inn fylki og skilar uppflettitöflu. \n",
     "        Lyklarnir í töflunni eru staðsetningar í fylkinu og eru tjáðir með tvenndinni (röð, dálkur). \n",
     "        Gildin í töflunni eru gildin í fylkinu með tilsvarandi staðsetningu. Ef d = arr_to_dict(arr) þá gildir að d[(i, j)] == arr[i][j].\n",
@@ -17,7 +19,83 @@
     "\n",
     "\n",
     "        return {(i, j): arr[i][j] \n",
-    "                for i in range(len(arr)) for j in range(len(arr[i]))}"
+    "                for i in range(len(arr)) \n",
+    "                for j in range(len(arr[i]))}\n",
+    "    ...\n",
+    "    \n",
+    "    def dict_to_arr(self, d):\n",
+    "        '''\n",
+    "        Skrifið fallið dict_to_arr(d) sem gerir öfugt við fallið í 1. Fallið tekur inn uppflettitöflu d og skilar fylki sem lista af listum. \n",
+    "        Ef arr = dict_to_arr(d) þá gildir að d[(i,j)] == arr[i][j].\n",
+    "\n",
+    "        Inntak: Uppflettitafla d sem geymir sérhvert stak fylkis arr[i][j] með lykli (i, j).\n",
+    "        Skilar: arr, sem er ferningsfylki sem tjáð er sem listi af listum (sjá að ofan). Þannig er arr[i][j] == d[(i, j)].\n",
+    "        '''\n",
+    "        n = max(i for i, j in d.keys()) + 1  #Reiknar með fernings\n",
+    "    \n",
+    "        # Tómt fylki\n",
+    "        arr = [[None for _ in range(n)] for _ in range(n)]\n",
+    "        \n",
+    "        # Fyllir fylkið\n",
+    "        for (i, j), value in d.items():\n",
+    "            arr[i][j] = value\n",
+    "        \n",
+    "        return arr\n",
+    "\n",
+    "\n",
+    "\n",
+    "        ...\n",
+    "    def snuavid(self, d1):\n",
+    "        '''Fall sem snýr við uppflettitöflu d1 og skilar d2 þar sem lyklarnir eru gildin úr d1 \n",
+    "        og gildin eru lyklarnir úr d1. Ef fleiri en einn lykill vísar á sama gildi, þá geymir \n",
+    "        d2 lista af þeim lyklum í vaxandi röð.'''\n",
+    "\n",
+    "        # Starta tómt d2\n",
+    "        d2 = {}\n",
+    "\n",
+    "        # Tjékka öll lykil/gildi pör í d1\n",
+    "        for key, value in d1.items():\n",
+    "            # Ef gildi er þegar til í d2, bæta við lykli\n",
+    "            if value in d2:\n",
+    "                # Ef ekki listi, breyti í lista\n",
+    "                if isinstance(d2[value], list):\n",
+    "                    d2[value].append(key)\n",
+    "                else:\n",
+    "                    d2[value] = [d2[value], key]\n",
+    "            else:\n",
+    "                # Gildi í d2 með lykli\n",
+    "                d2[value] = key\n",
+    "\n",
+    "        # Sortum lista ef það er til fleiri en einn lykill fyrir sama gildi\n",
+    "        for key, value in d2.items():\n",
+    "            if isinstance(value, list):\n",
+    "                value.sort()  # Raða lyklar í vaxandi röð\n",
+    "\n",
+    "        return d2\n",
+    "\n",
+    "\n",
+    "\n",
+    "        ..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    skil = Skil()\n",
+    "\n",
+    "    a, b, c, d = 1, 2, 3, 4\n",
+    "    arr = [[a, b], [c, d]]\n",
+    "    D = {(0,0):a,(0,1):b,(1,0):c,(1,1):d}\n",
+    "    \n",
+    "    assert D == skil.arr_to_dict(arr), \"`arr_to_dict` er ekki rétt\"\n",
+    "    assert arr == skil.dict_to_arr(D), \"`dict_to_arr` er ekki rétt\"\n",
+    "\n",
+    "    d1 = {0: 1, 1: 2, 2: 1}\n",
+    "    assert {1: [0, 2], 2: 1} == skil.snuavid(d1), \"`snuavid` er ekki rétt\""
    ]
   }
  ],
